# jf

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml
assets/: jf.1  jf.txt
src/: cli.rs  error.rs  lib.rs  main.rs  tests.rs  usage.txt
