[package]
name = "jf"
version = "0.1.0"
edition = "2021"
authors = ["Arijit Basu <hi@arijitbasu.in>"]
description = 'jf "jf: %q" "JSON Format"'
keywords = ["json", "command-line", "cli"]
repository = "https://github.com/sayanarijit/jf"
readme = "README.md"
license = "MIT"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.10"
serde_json = "1.0"
serde_yaml = "0.9"
