[package]
name = "jf"
version = "0.1.1"
edition = "2021"
authors = ["Arijit Basu <hi@arijitbasu.in>"]
description = 'jf "jf: %q" "JSON Format"'
keywords = ["json", "command-line", "cli"]
repository = "https://github.com/sayanarijit/jf"
readme = "README.md"
license = "MIT"
autoexamples = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
