[package]
name = "jf"
version = "0.2.7"
edition = "2021"
authors = ["Arijit Basu <hi@arijitbasu.in>"]
description = 'A small utility to safely format and print JSON objects in the commandline'
keywords = ["json", "command-line", "cli"]
repository = "https://github.com/sayanarijit/jf"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = 'abort'
